syntax = "proto3";
package serverpb;

message NodeMeta {
  string id = 1;
  string public_key = 2;
  repeated string addrs = 3;
  string cert = 4;
  int64 updated = 5;
  string signature = 6;
}

message NodeConfig {
  string path = 1;
  int32 max_peers = 2;
}

message HelloRequest {
  NodeMeta meta = 1;
}
message HelloResponse {
  NodeMeta meta = 1;
  repeated NodeMeta connected_peers = 2;
  repeated NodeMeta known_peers = 3;
}

message HeartBeatRequest {}
message HeartBeatResponse {}

service Node {
  rpc Hello(HelloRequest) returns (HelloResponse) {}
  rpc HeartBeat(HeartBeatRequest) returns (HeartBeatResponse) {}
}
